CosmicCalculator manual: Basic definition and derivations added
I started adding explanations (for an observer) on the basic
cosmological concepts distances in 2D. This needs to be continued to
3D later and the major concepts also explained.

--- a/.gitignore
+++ b/.gitignore
@@ -81,4 +81,6 @@ doc/www/gnuastro/manual/
 doc/www/gnuastro/MathJax/
 doc/subpackageversions.texi
 doc/gnuastro-figures/iandtime.png
+doc/gnuastro-figures/flatplane.png
 doc/gnuastro-figures/samplingfreq.png
+doc/gnuastro-figures/sphericalplane.png
