--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -51,10 +51,26 @@
 # since everything here is going to be replaced with the same variable
 # that was defined there.
 
-# Run the genauthors script to create the AUTHORS file (which is
-# necessary in autoreconf (since we want to satisfy the GNU Coding
-# Standards which require this file's existence).
+
+
+# The default ./bootstrap script (which we cannot change) uses a
+# simple `mkdir $build_aux' to make this directory, in the default
+# case (where build_aux was not a subdirectory) there was no problem,
+# but now it is. So we have to make the `gnulib' directory here first.
+#
+# Note that non-GNU mkdir will complain if the directory already
+# exists, so to avoid complaints, first we check if it is already
+# present or not.
+if [ ! -d gnulib ]; then mkdir gnulib; fi
+
+
+# Run the genauthors script to create the AUTHORS file which is
+# necessary in autoreconf. Recall that we have to satisfy the GNU
+# Coding Standards which require this file's existence and autoreconf
+# will complain if its not here.
 ./genauthors
+
+
 
 # Extra options we want to have added to the execution of gnulib-tool
 # for Gnuastro. See the `gnulib_tool_options' variable in bootstrap
@@ -64,18 +80,42 @@ gnulib_tool_option_extras="\
  --no-vc-files\
 "
 
-# Redefine the lib and tests base directories, because Gnuastro has
-# its own lib and tests directories and we don't want them to be mixed
-# up with those that Gnulib adds.
+
+
+# Redefine the lib, tests and build_aux base directories, because
+# Gnuastro has its own lib and tests directories and we don't want
+# them to be mixed up with those that Gnulib adds. build-aux is also
+# best defined inside the gnulib directory for this top directory to
+# be as clean as possible and also because it is part of gnulib.
 source_base="gnulib/lib"
 tests_base="gnulib/tests"
+build_aux="gnulib/build-aux"
+
+
+
+# This name will be appended to the Gnulib's Automake variables. By
+# default the ./bootstrap script takes the long package name as a
+# reference, but for Gnuastro, since the long package name contains a
+# space, it is replaced with astronomy-utilities, and so Automake will
+# complain (for example: bad characters in variable name
+# 'libastronomy-utilities_la_SOURCES'). So we are also redefining it
+# here. This name is irrelevant for the final process.
+gnulib_name="libgnu"
+
+
 
 # Processes to run after gnulib-tool and before autoreconf:
 bootstrap_post_import_hook()
 {
-  echo $GNULIB_SRCDIR
-  exit 1
+  # Get the necesssary Autoconf-archive macros. It is assumed that
+  # autoconf-archives is in the same directory as gnulib, so we just
+  # replace `gnulib' in GNULIB_SRCDIR with `autoconf-archive' to get
+  # to it. Then we simply copy the desired m4 macros.
+  autoconfardir=$(echo $GNULIB_SRCDIR | sed 's/gnulib/autoconf-archive/')
+  cp $autoconfardir/m4/ax_pthread.m4 ./m4/
 }
+
+
 
 # Run other necessary operations after all the default bootstrap
 # operations are complete.
