--- a/.gitignore
+++ b/.gitignore
@@ -76,12 +76,13 @@ doc/stamp-vti
 autom4te.cache
 doc/texinfo.tex
 doc/version.texi
+doc/authors.texi
 doc/plotsrc/tikz/
 /gnulib/build-aux
 doc/www/gnuastro/CVS/
+doc/utilityversions.texi
 doc/www/gnuastro/manual/
 doc/www/gnuastro/MathJax/
-doc/subpackageversions.texi
 doc/gnuastro-figures/iandtime.png
 doc/gnuastro-figures/flatplane.png
 doc/gnuastro-figures/samplingfreq.png
