Development: AUTHORS will be generated when creating a tar-ball
Until now the genauthors script would only be called during
bootstrapping. So the top Makefile.am was also modified to generate
AUTHORS using this script when ever a `make dist*' (any make target
that starts with a `dist') is run.

--- a/Makefile.am
+++ b/Makefile.am
@@ -77,7 +77,10 @@ $(MAYBE_IMGWARP) $(MAYBE_MKCATALOG) $(MAYBE_MKNOISE) $(MAYBE_MKPROF)	\
 $(MAYBE_NOISECHISEL) $(MAYBE_SUBTRACTSKY) doc tests
 
 
+## Add m4/ to the list of directories to search for m4 files
+## =========================================================
 ACLOCAL_AMFLAGS = -I m4
+
 
 
 ## Files that are installed (and distributed)
@@ -85,8 +88,31 @@ ACLOCAL_AMFLAGS = -I m4
 dist_doc_DATA = README
 
 
-## Files that are only distributed:
-## ================================
-EXTRA_DIST = bootstrap bootstrap.conf m4/gnulib-cache.m4	\
- include/commonargs.h include/commonparams.h			\
+## Files that are only distributed
+## ===============================
+EXTRA_DIST = bootstrap bootstrap.conf genauthors m4/gnulib-cache.m4	\
+ include/commonargs.h include/commonparams.h				\
  include/fixedstringmacros.h include/neighbors.h
+
+
+## Generate AUTHORS
+## ================
+##
+## The AUTHORS file is generated automatically from the version
+## control history. Note the following to cases:
+##
+##   - The AUTHORS file is a prerequisite for the make dist* commands
+##     (all make targets including "dist"). So it is not needed when
+##     we only run "make".
+##
+##   - AUTHORS is defined as a PHONY target so that it is called every
+##     time any "make dist*" is called, even if AUTHORS already
+##     exists. It is possible to build from the tar-ball (that doesn't
+##     include version control), so we cannot set any dependancies for
+##     it. But generally, "make dist*" is not called to often, so
+##     there is no problem.
+##
+##   - The genauthors script will not do anything (make/update the
+##     AUTHORS file) when there is no git repository.
+.PHONY: AUTHORS
+AUTHORS:; ./genauthors
