Development: Added top_srcdir for genauthors
I had mistakenly forgot to run "make distcheck" before the previous
commit (which updated AUTHORS before any make dist command). I had
forgot to add the top_srcdir variable to allow building in separate
directories. The problem is now solved.

--- a/Makefile.am
+++ b/Makefile.am
@@ -115,4 +115,5 @@ EXTRA_DIST = bootstrap bootstrap.conf genauthors m4/gnulib-cache.m4	\
 ##   - The genauthors script will not do anything (make/update the
 ##     AUTHORS file) when there is no git repository.
 .PHONY: AUTHORS
-AUTHORS:; ./genauthors
+AUTHORS:
+	$(top_srcdir)/genauthors
