--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,5 @@ doc/gnuastro-figures/iandtime.png
 doc/gnuastro-figures/flatplane.png
 doc/gnuastro-figures/samplingfreq.png
 doc/gnuastro-figures/sphericalplane.png
+doc/gnuastro.html/*
+doc/gnuastro.t2d/*
