--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -53,15 +53,8 @@
 
 
 
-# The default ./bootstrap script (which we cannot change) uses a
-# simple `mkdir $build_aux' to make this directory, in the default
-# case (where build_aux was not a subdirectory) there was no problem,
-# but now it is. So we have to make the `gnulib' directory here first.
-#
-# Note that non-GNU mkdir will complain if the directory already
-# exists, so to avoid complaints, first we check if it is already
-# present or not.
-if [ ! -d gnulib ]; then mkdir gnulib; fi
+# Define directory name for outsourced files.
+importdir="imported"
 
 
 # Run the genauthors script to create the AUTHORS file which is
@@ -82,14 +75,14 @@ gnulib_tool_option_extras="\
 
 
 
-# Redefine the lib, tests and build_aux base directories, because
-# Gnuastro has its own lib and tests directories and we don't want
-# them to be mixed up with those that Gnulib adds. build-aux is also
-# best defined inside the gnulib directory for this top directory to
-# be as clean as possible and also because it is part of gnulib.
-source_base="gnulib/lib"
-tests_base="gnulib/tests"
-build_aux="gnulib/build-aux"
+# Redefine the base directories for output files. We don't want
+# imported files to be mixed up with hand-written Gnuastro
+# files.
+m4_base="$importdir/m4"
+doc_base="$importdir/doc"
+source_base="$importdir/lib"
+tests_base="$importdir/tests"
+build_aux="$importdir/build-aux"
 
 
 
@@ -104,15 +97,23 @@ gnulib_name="libgnu"
 
 
 
-# Processes to run after gnulib-tool and before autoreconf:
+# Processes to run after gnulib-tool and before autoreconf.
 bootstrap_post_import_hook()
 {
+
   # Get the necesssary Autoconf-archive macros. It is assumed that
   # autoconf-archives is in the same directory as gnulib, so we just
   # replace `gnulib' in GNULIB_SRCDIR with `autoconf-archive' to get
-  # to it. Then we simply copy the desired m4 macros.
+  # to it. Then we simply copy the desired m4 macros if an
+  # Autoconf-archive exists or download it otherwise.
   autoconfardir=$(echo $GNULIB_SRCDIR | sed 's/gnulib/autoconf-archive/')
-  cp $autoconfardir/m4/ax_pthread.m4 ./m4/
+  if [ -f $autoconfardir/m4/ax_pthread.m4 ]; then
+    cp $autoconfardir/m4/ax_pthread.m4 $m4_base/
+  else
+    wget -O $m4_base/ax_pthread.m4                                       \
+     "http://git.savannah.gnu.org/gitweb/?p=autoconf-archive.git;a=blob_plain;f=m4/ax_pthread.m4" || die "Failed to download ax_pthread.m4!"
+  fi
+
 }
 
 
