--- a/src/convertt/Makefile.am
+++ b/src/convertt/Makefile.am
@@ -26,9 +26,11 @@ endif
 
 # Flags:
 AM_CFLAGS = -Wall -O3
+
 AM_LDFLAGS = -lcfitsio -lwcs -lm $(MAYBE_HASLIBJPEG) -L$(top_builddir)/lib
-AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include	\
--I$(top_builddir)/gnulib/lib -I$(top_srcdir)/gnulib/lib
+
+AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include \
+-I$(top_builddir)/imported/lib -I$(top_srcdir)/imported/lib
 
 
 
@@ -41,8 +43,8 @@ bin_PROGRAMS = astconvertt
 astconvertt_SOURCES = main.c main.h args.h cite.h ui.c ui.h eps.c	\
 eps.h jpeg.c jpeg.h convertt.c convertt.h
 
-astconvertt_LDADD = $(top_builddir)/gnulib/lib/libgnu.la	\
--lconfigfiles -lfitsarrayvv -ltxtarrayvv -lcheckset -ltiming	\
+astconvertt_LDADD = $(top_builddir)/imported/lib/libgnu.la      \
+-lconfigfiles -lfitsarrayvv -ltxtarrayvv -lcheckset -ltiming    \
 -llinkedlist -lstatistics -larraymanip -lforqsort
 
 
