--- a/src/cosmiccal/Makefile.am
+++ b/src/cosmiccal/Makefile.am
@@ -23,9 +23,11 @@
 
 # Flags:
 AM_CFLAGS = -Wall -O3
+
 AM_LDFLAGS = -lgsl -lgslcblas -lm -L$(top_builddir)/lib
-AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include	\
--I$(top_builddir)/gnulib/lib -I$(top_srcdir)/gnulib/lib
+
+AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include \
+-I$(top_builddir)/imported/lib -I$(top_srcdir)/imported/lib
 
 
 
@@ -37,7 +39,7 @@ bin_PROGRAMS = astcosmiccal
 astcosmiccal_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
 cosmiccal.c cosmiccal.h
 
-astcosmiccal_LDADD = $(top_builddir)/gnulib/lib/libgnu.la	\
+astcosmiccal_LDADD = $(top_builddir)/imported/lib/libgnu.la	\
 -lconfigfiles -lfitsarrayvv -lcheckset -ltiming -llinkedlist
 
 
