--- a/src/convolve/Makefile.am
+++ b/src/convolve/Makefile.am
@@ -21,9 +21,11 @@
 
 # Flags:
 AM_CFLAGS = -Wall -O3
+
 AM_LDFLAGS = -lcfitsio -lwcs  -lgsl -lgslcblas -lm -L$(top_builddir)/lib
-AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include	\
--I$(top_builddir)/gnulib/lib -I$(top_srcdir)/gnulib/lib
+
+AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include \
+-I$(top_builddir)/imported/lib -I$(top_srcdir)/imported/lib
 
 
 
@@ -35,7 +37,7 @@ bin_PROGRAMS = astconvolve
 astconvolve_SOURCES = main.c main.h args.h ui.c ui.h convolve.c	\
 convolve.h cite.h
 
-astconvolve_LDADD = $(top_builddir)/gnulib/lib/libgnu.la -lcheckset	\
+astconvolve_LDADD = $(top_builddir)/imported/lib/libgnu.la -lcheckset	\
 -lfitsarrayvv -ltiming -lconfigfiles -lmesh -lastrthreads		\
 -lspatialconvolve -lbox -larraymanip -lstatistics -lforqsort		\
 -llinkedlist
