--- a/src/header/Makefile.am
+++ b/src/header/Makefile.am
@@ -23,10 +23,11 @@
 
 # Flags:
 AM_CFLAGS = -Wall -O3
-AM_LDFLAGS = -lcfitsio -lwcs -lgsl -lgslcblas -lm	\
--L$(top_builddir)/lib
-AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include	\
--I$(top_builddir)/gnulib/lib -I$(top_srcdir)/gnulib/lib
+
+AM_LDFLAGS = -lcfitsio -lwcs -lgsl -lgslcblas -lm -L$(top_builddir)/lib
+
+AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include \
+-I$(top_builddir)/imported/lib -I$(top_srcdir)/imported/lib
 
 
 
@@ -38,7 +39,7 @@ bin_PROGRAMS = astheader
 astheader_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
 header.c header.h
 
-astheader_LDADD = $(top_builddir)/gnulib/lib/libgnu.la -lconfigfiles	\
+astheader_LDADD = $(top_builddir)/imported/lib/libgnu.la -lconfigfiles	\
 -lfitsarrayvv -lcheckset -ltiming -llinkedlist
 
 
