--- a/src/noisechisel/Makefile.am
+++ b/src/noisechisel/Makefile.am
@@ -20,9 +20,11 @@
 
 # Flags:
 AM_CFLAGS = -Wall -O3
+
 AM_LDFLAGS = -lcfitsio -lwcs -lm -L$(top_builddir)/lib
-AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include	\
--I$(top_builddir)/gnulib/lib -I$(top_srcdir)/gnulib/lib
+
+AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include \
+-I$(top_builddir)/imported/lib -I$(top_srcdir)/imported/lib
 
 
 
@@ -36,7 +38,7 @@ noisechisel.c noisechisel.h thresh.c thresh.h binary.c binary.h		\
 label.c label.h detection.c detection.h sky.c sky.h segmentation.c	\
 segmentation.h clumps.c clumps.h
 
-astnoisechisel_LDADD = $(top_builddir)/gnulib/lib/libgnu.la		\
+astnoisechisel_LDADD = $(top_builddir)/imported/lib/libgnu.la		\
 -lconfigfiles -lfitsarrayvv -lcheckset -ltiming -lmesh			\
 -lspatialconvolve -lastrthreads -lmode -lstatistics -larraymanip	\
 -lforqsort -llinkedlist -lbox
