Development: Renamed imported/ to bootstrapped/
The "imported/" name for the outputs of the bootstrapping process was
ambiguous: What is imported? From where? Is it hand written and part of the
utility or library source codes (like "include/")? What is the difference
with "include/" (for a non-programmer)?

So the name of the directory was changed to "bootstrapped/" to be more
clear and directly tell anyone who is looking at the contents of the top
directory that it has something to do with "bootstrap" and
"bootstrap.conf".

--- a/.gitignore
+++ b/.gitignore
@@ -67,22 +67,22 @@ install-sh
 aclocal.m4
 test-driver
 config.h.in
-imported/m4
-imported/lib
-imported/doc
 doc/mdate-sh
 gnuastro.t2p
 config.guess
 config.status
 doc/stamp-vti
 autom4te.cache
-imported/tests
 doc/texinfo.tex
+bootstrapped/m4
+bootstrapped/lib
+bootstrapped/doc
 doc/version.texi
 doc/authors.texi
 doc/plotsrc/tikz/
-/imported/build-aux
+bootstrapped/tests
 doc/www/gnuastro/CVS/
+/bootstrapped/build-aux
 doc/utilityversions.texi
 doc/www/gnuastro/manual/
 doc/www/gnuastro/MathJax/
