--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -53,9 +53,6 @@
 
 
 
-# Define directory name for outsourced files.
-importdir="imported"
-
 
 # Run the genauthors script to create the AUTHORS file which is
 # necessary in autoreconf. Recall that we have to satisfy the GNU
@@ -78,11 +75,11 @@ gnulib_tool_option_extras="\
 # Redefine the base directories for output files. We don't want
 # imported files to be mixed up with hand-written Gnuastro
 # files.
-m4_base="$importdir/m4"
-doc_base="$importdir/doc"
-source_base="$importdir/lib"
-tests_base="$importdir/tests"
-build_aux="$importdir/build-aux"
+m4_base="bootstrapped/m4"
+doc_base="bootstrapped/doc"
+source_base="bootstrapped/lib"
+tests_base="bootstrapped/tests"
+build_aux="bootstrapped/build-aux"
 
 
 
