--- a/src/convolve/Makefile.am
+++ b/src/convolve/Makefile.am
@@ -25,7 +25,7 @@ AM_CFLAGS = -Wall -O3
 AM_LDFLAGS = -lcfitsio -lwcs  -lgsl -lgslcblas -lm -L$(top_builddir)/lib
 
 AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include \
--I$(top_builddir)/imported/lib -I$(top_srcdir)/imported/lib
+-I$(top_builddir)/bootstrapped/lib -I$(top_srcdir)/bootstrapped/lib
 
 
 
@@ -37,10 +37,9 @@ bin_PROGRAMS = astconvolve
 astconvolve_SOURCES = main.c main.h args.h ui.c ui.h convolve.c	\
 convolve.h cite.h
 
-astconvolve_LDADD = $(top_builddir)/imported/lib/libgnu.la -lcheckset	\
--lfitsarrayvv -ltiming -lconfigfiles -lmesh -lastrthreads		\
--lspatialconvolve -lbox -larraymanip -lstatistics -lforqsort		\
--llinkedlist
+astconvolve_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la -lcheckset   \
+-lfitsarrayvv -ltiming -lconfigfiles -lmesh -lastrthreads -lspatialconvolve \
+-lbox -larraymanip -lstatistics -lforqsort -llinkedlist
 
 
 
