--- a/src/imgcrop/Makefile.am
+++ b/src/imgcrop/Makefile.am
@@ -25,7 +25,7 @@ AM_CFLAGS = -Wall -O3
 AM_LDFLAGS = -lcfitsio -lwcs -lgsl -lgslcblas -lm -L$(top_builddir)/lib
 
 AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include \
--I$(top_builddir)/imported/lib -I$(top_srcdir)/imported/lib
+-I$(top_builddir)/bootstrapped/lib -I$(top_srcdir)/bootstrapped/lib
 
 
 
@@ -37,9 +37,9 @@ bin_PROGRAMS = astimgcrop
 astimgcrop_SOURCES = main.c main.h cite.h ui.c ui.h args.h imgcrop.c	\
 imgcrop.h wcsmode.c wcsmode.h crop.c crop.h
 
-astimgcrop_LDADD = $(top_builddir)/imported/lib/libgnu.la -lconfigfiles	\
--lfitsarrayvv -ltxtarrayvv -lcheckset -llinkedlist -ltiming		\
--lastrthreads -lbox -lpolygon
+astimgcrop_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la -lconfigfiles \
+-lfitsarrayvv -ltxtarrayvv -lcheckset -llinkedlist -ltiming -lastrthreads   \
+-lbox -lpolygon
 
 
 
