--- a/src/imgstat/Makefile.am
+++ b/src/imgstat/Makefile.am
@@ -24,7 +24,7 @@ AM_CFLAGS = -Wall -O3
 AM_LDFLAGS = -lcfitsio -lwcs -lgsl -lgslcblas -lm -L$(top_builddir)/lib
 
 AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include \
--I$(top_builddir)/imported/lib -I$(top_srcdir)/imported/lib
+-I$(top_builddir)/bootstrapped/lib -I$(top_srcdir)/bootstrapped/lib
 
 
 
@@ -36,8 +36,8 @@ bin_PROGRAMS = astimgstat
 astimgstat_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
 imgstat.c imgstat.h
 
-astimgstat_LDADD = $(top_builddir)/imported/lib/libgnu.la -lconfigfiles	\
--lfitsarrayvv -lcheckset -ltiming -llinkedlist -lmode -lstatistics	\
+astimgstat_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la -lconfigfiles \
+-lfitsarrayvv -lcheckset -ltiming -llinkedlist -lmode -lstatistics          \
 -larraymanip -lforqsort
 
 
