--- a/src/mknoise/Makefile.am
+++ b/src/mknoise/Makefile.am
@@ -24,7 +24,7 @@ AM_CFLAGS = -Wall -O3
 AM_LDFLAGS = -lcfitsio -lwcs -lgsl -lgslcblas -lm -L$(top_builddir)/lib
 
 AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include \
--I$(top_builddir)/imported/lib -I$(top_srcdir)/imported/lib
+-I$(top_builddir)/bootstrapped/lib -I$(top_srcdir)/bootstrapped/lib
 
 
 
@@ -36,7 +36,7 @@ bin_PROGRAMS = astmknoise
 astmknoise_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
 mknoise.c mknoise.h
 
-astmknoise_LDADD = $(top_builddir)/imported/lib/libgnu.la -lconfigfiles	\
+astmknoise_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la -lconfigfiles \
 -lfitsarrayvv -lcheckset -ltiming -lastrthreads
 
 
