--- a/src/mkprof/Makefile.am
+++ b/src/mkprof/Makefile.am
@@ -25,7 +25,7 @@ AM_CFLAGS = -Wall -O3
 AM_LDFLAGS = -lcfitsio -lwcs -lgsl -lgslcblas -lm -L$(top_builddir)/lib
 
 AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include \
--I$(top_builddir)/imported/lib -I$(top_srcdir)/imported/lib
+-I$(top_builddir)/bootstrapped/lib -I$(top_srcdir)/bootstrapped/lib
 
 
 
@@ -35,9 +35,9 @@ bin_PROGRAMS = astmkprof
 astmkprof_SOURCES = main.c main.h ui.c ui.h mkprof.c mkprof.h args.h	\
 oneprofile.c oneprofile.h profiles.c profiles.h cite.h
 
-astmkprof_LDADD = $(top_builddir)/imported/lib/libgnu.la -lconfigfiles	\
--lfitsarrayvv -ltxtarrayvv -lcheckset -llinkedlist -ltiming		\
--lastrthreads -lbox -lstatistics -larraymanip -lforqsort
+astmkprof_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la -lconfigfiles \
+-lfitsarrayvv -ltxtarrayvv -lcheckset -llinkedlist -ltiming -lastrthreads  \
+-lbox -lstatistics -larraymanip -lforqsort
 
 
 
