--- a/src/noisechisel/Makefile.am
+++ b/src/noisechisel/Makefile.am
@@ -24,7 +24,7 @@ AM_CFLAGS = -Wall -O3
 AM_LDFLAGS = -lcfitsio -lwcs -lm -L$(top_builddir)/lib
 
 AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include \
--I$(top_builddir)/imported/lib -I$(top_srcdir)/imported/lib
+-I$(top_builddir)/bootstrapped/lib -I$(top_srcdir)/bootstrapped/lib
 
 
 
@@ -38,10 +38,9 @@ noisechisel.c noisechisel.h thresh.c thresh.h binary.c binary.h		\
 label.c label.h detection.c detection.h sky.c sky.h segmentation.c	\
 segmentation.h clumps.c clumps.h
 
-astnoisechisel_LDADD = $(top_builddir)/imported/lib/libgnu.la		\
--lconfigfiles -lfitsarrayvv -lcheckset -ltiming -lmesh			\
--lspatialconvolve -lastrthreads -lmode -lstatistics -larraymanip	\
--lforqsort -llinkedlist -lbox
+astnoisechisel_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la            \
+-lconfigfiles -lfitsarrayvv -lcheckset -ltiming -lmesh -lspatialconvolve     \
+-lastrthreads -lmode -lstatistics -larraymanip -lforqsort -llinkedlist -lbox
 
 
 
