--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -75,18 +75,11 @@ gnulib_tool_option_extras="\
 # Redefine the base directories for output files. We don't want
 # imported files to be mixed up with hand-written Gnuastro
 # files.
-#
-# NOTE: ./bootstrap will add the build_aux value to .gitignore. If it
-# doesn't find the exact string value given here in .gitignore, it
-# will add it to the top of .gitignore (which we don't want). In
-# .gitignore, all the directories end with a slash (`/', to tell git
-# it is a directory and help it ignore all their contents), so we have
-# followed the same convention here.
-m4_base="bootstrapped/m4/"
-doc_base="bootstrapped/doc/"
-source_base="bootstrapped/lib/"
-tests_base="bootstrapped/tests/"
-build_aux="bootstrapped/build-aux/"
+m4_base="bootstrapped/m4"
+doc_base="bootstrapped/doc"
+source_base="bootstrapped/lib"
+tests_base="bootstrapped/tests"
+build_aux="bootstrapped/build-aux"
 
 
 
