Installation: Use curl to download file when available
In `bootstrap_post_import_hook' function, use curl to download files
from the web, when available, as wget may not be available on OS X.

In addition, `autoconfardir' has been simplified, there was no need to
call `sed'.

All variables containing paths have been quoted.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -103,11 +103,21 @@ bootstrap_post_import_hook()
   # replace `gnulib' in GNULIB_SRCDIR with `autoconf-archive' to get
   # to it. Then we simply copy the desired m4 macros if an
   # Autoconf-archive exists or download it otherwise.
-  autoconfardir=$(echo $GNULIB_SRCDIR | sed 's/gnulib/autoconf-archive/')
-  if [ -f $autoconfardir/m4/ax_pthread.m4 ]; then
-    cp $autoconfardir/m4/ax_pthread.m4 $m4_base/
+  autoconfardir="$GNULIB_SRCDIR/../autoconf-archive/"
+  if [ -f "$autoconfardir/m4/ax_pthread.m4" ]; then
+    cp "$autoconfardir/m4/ax_pthread.m4 $m4_base/"
   else
-    wget -O $m4_base/ax_pthread.m4                                       \
+    # Choose the program to use to download files from the web.  `curl' is
+    # present in most GNU/Linux systems and OS X as well, `wget' is usually
+    # present only on GNU/Linux systems.  Since `curl' is available in more
+    # systems, we first try if it's installed, otherwise we fallback on
+    # `wget'.
+    if type curl > /dev/null; then
+      downloader="curl -o"
+    else
+      downloader="wget -O"
+    fi
+    $downloader "$m4_base/ax_pthread.m4" \
      "http://git.savannah.gnu.org/gitweb/?p=autoconf-archive.git;a=blob_plain;f=m4/ax_pthread.m4" || die "Failed to download ax_pthread.m4!"
   fi
 
